--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "human_challenge_backend",
-  "version": "1.0.0",
-  "description": "back end de l'application mobile HC",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stevenpersia/hc-back-end.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/stevenpersia/hc-back-end/issues"
-  },
-  "homepage": "https://github.com/stevenpersia/hc-back-end#readme",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongoose": "^5.3.13"
-  }
+	"name": "human_challenge_backend",
+	"version": "1.0.0",
+	"description": "back end de l'application mobile HC",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/stevenpersia/hc-back-end.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/stevenpersia/hc-back-end/issues"
+	},
+	"homepage": "https://github.com/stevenpersia/hc-back-end#readme",
+	"dependencies": {
+		"body-parser": "^1.18.3",
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
+		"mongoose": "^5.3.13"
+	}
 }
