--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 	"dependencies": {
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.5",
+		"crypto-js": "^3.1.9-1",
 		"express": "^4.16.4",
-		"mongoose": "^5.3.13"
+		"mongoose": "^5.3.13",
+		"uid2": "0.0.3"
 	}
 }
