--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"homepage": "https://github.com/stevenpersia/hc-back-end#readme",
 	"dependencies": {
 		"body-parser": "^1.18.3",
+		"cloudinary": "^1.13.2",
 		"cors": "^2.8.5",
 		"crypto-js": "^3.1.9-1",
 		"express": "^4.16.4",
