--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"cloudinary": "^1.13.2",
 		"cors": "^2.8.5",
 		"crypto-js": "^3.1.9-1",
+		"dotenv": "^6.1.0",
 		"express": "^4.16.4",
 		"mongoose": "^5.3.13",
 		"uid2": "0.0.3"
